--- a/index.jade
+++ b/index.jade
@@ -2,4 +2,5 @@
 html
 	head
 		script(type="text/javascript", charset="utf-8", src="js/web.js")
+		script(type="text/javascript", charset="utf-8")!= "window.webpack_output = " + JSON.stringify(output) + ";"
 	body
