--- a/web_modules/bootstrap/bootstrap.less
+++ b/web_modules/bootstrap/bootstrap.less
@@ -27,7 +27,7 @@
 @import "bootstrap/less/tables.less";
 
 // Components: common
-// @import "bootstrap/less/sprites.less";
+@import "bootstrap/less/sprites.less";
 // @import "bootstrap/less/dropdowns.less";
 // @import "bootstrap/less/wells.less";
 @import "bootstrap/less/component-animations.less";
