--- a/web_modules/mybootstrap/variables.less
+++ b/web_modules/mybootstrap/variables.less
@@ -128,8 +128,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "bootstrap/img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "bootstrap/img/glyphicons-halflings-white.png";
+@iconSpritePath:          "~bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "~bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
