--- a/lib/home.jade
+++ b/lib/home.jade
@@ -1,6 +1,4 @@
 .alert.alert-success
-	| You are on
-	= " "
-	em Home
+	!= require("i18n/sync!./nls/home.json").message
 h2 home.jade
 pre: code= require("raw!./home.jade")
