--- a/lib/test1/content.jade
+++ b/lib/test1/content.jade
@@ -1,4 +1,4 @@
-h1 three.js canvas - camera - orthographic example
+h1= require("i18n!./nls/content.json").title
 .three-container
 h2 test1/index.js
 pre.pre-scrollable: code= require("raw!./index.js")
