--- a/lib/test2.jade
+++ b/lib/test2.jade
@@ -1,4 +1,4 @@
 .alert.alert-warning
-	span This is the <em>second</em> test.
+	span!= require("i18n!./nls/test2.json").message;
 h2 test2.jade
 pre: code= require("raw!./test2.jade")
