--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,6 @@
 !!! html
 html
 	head
-		script(type="text/javascript", charset="utf-8", src="asserts/"+hash+".js")
+		script(type="text/javascript", charset="utf-8", src="assets/"+hash+".js")
 		script(type="text/javascript", charset="utf-8")!= "window.webpack_output = " + JSON.stringify(output) + ";"
 	body
