--- a/web_modules/mybootstrap/bootstrap.less
+++ b/web_modules/mybootstrap/bootstrap.less
@@ -59,6 +59,12 @@
 // @import "~bootstrap/less/hero-unit.less";
 
 
+// Navbar extra padding
+body {
+	padding-top: 70px;
+}
+
+
 // RESPONSIVE CLASSES
 // ------------------
 
