--- a/app/test3.jade
+++ b/app/test3.jade
@@ -3,3 +3,15 @@
 	= " "
 	b last
 	|  test.
+------
+.alert.alert-error
+	| This is the
+	= " "
+	i last
+	|  test. (Updated Version 1)
+------
+.alert.alert-error
+	| This is the
+	= " "
+	b last
+	|  test. (Updated Version 2)
