--- a/app/test2.jade
+++ b/app/test2.jade
@@ -2,3 +2,13 @@
 	span This is the <em>second</em> test.
 h2 test2.jade
 pre: code= require("!raw!./test2.jade")
+------
+.alert.alert-warning
+	span This is the <b>second</b> test. (Updated Version 1)
+h2 test2.jade
+pre: code= require("!raw!./test2.jade")
+------
+.alert.alert-warning
+	span This is the <em>second</em> test. (Updated Version 2)
+h2 test2.jade
+pre: code= require("!raw!./test2.jade")
